[gd_scene load_steps=2 format=3 uid="uid://bj5y314d3ssba"]

[ext_resource type="Script" path="res://scripts/systems/file_spawner.gd" id="1_c2f8w"]

[node name="Spawner" type="Node2D"]
script = ExtResource("1_c2f8w")

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SpawnRateTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="SpawnRateTimer" to="." method="_on_spawn_rate_timer_timeout"]
